# tkinter_nba_stats_gui

./: .gitignore  NBAStatsGUI.bat  README.md  pyproject.toml  requirements.txt
.VSCodeCounter/2025-02-19_23-45-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
sql/: delete_allstar.sql
src/: main.py  test.py  utility.py
src/data_handling/: cleaning.py  player.py  team.py
src/database/: config.py  query.py
src/frames/: baseframe.py  header.py  menu.py  mode_selector.py  result_frame.py  search_menu.py
src/requests/: image_request.py
